Gateway API/RouteObject.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: iphone-routes
  namespace: app1-ns
spec:
  parentRefs:
    - name: gateway
      namespace: ngf-gatewayapi-ns
      sectionName: http
  rules:
    - matches:
        - path:
          type: PathPrefix
          value: /iphone
      backendRefs:
        - name: iphone-svc
          port: 80
